@@ -185,9 +185,9 @@ dependencies {
     runtimeOnly fg.deobf("dev.xkmc.l2modularblock:l2modularblock:1.1.0")
     implementation fg.deobf("dev.xkmc.l2screentracker:l2screentracker:0.1.3")
 
-    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.1.6")) {
+    implementation fg.deobf(jarJar("dev.xkmc.l2tabs:l2tabs:0.1.9")) {
         transitive = false
-        jarJar.ranged(it, "[0.1.6,)")
+        jarJar.ranged(it, "[0.1.9,)")
     }
 
     implementation fg.deobf(jarJar("dev.xkmc.l2itemselector:l2itemselector:0.1.7")) {
