@@ -3,5 +3,4 @@ package dev.xkmc.modulargolems.content.entity.common;
 public class ModelProvider {
 
 
-
 }
